<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DashBoardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/dashboard"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:padding="18dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_option"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cardBkash"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardBkash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_margin="12dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOption"
            app:strokeColor="@color/text_color"
            app:strokeWidth="1dp"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgBkash"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/ic_bkash_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvBkash"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:text="@string/bkash"
                    android:layout_marginStart="12dp"
                    app:layout_constraintStart_toEndOf="@id/imgBkash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardNagad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_margin="12dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardBkash"
            app:strokeColor="@color/text_color"
            app:strokeWidth="1dp"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgNagad"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/ic_nagad_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:text="@string/nagad"
                    android:layout_marginStart="12dp"
                    app:layout_constraintStart_toEndOf="@id/imgNagad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>



        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listPayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOption"
            tools:itemCount="4"
            android:visibility="gone"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_text" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>